--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@
         margin: 0;
         box-sizing: border-box;
         line-height: 1;
-        user-select: none;
+        user-select: inherit;
     }
     body {
         font-family: 'Poppins', sans-serif;
